Fixed overflow of the bearings onto two lines when adding QSOs

--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,7 @@ input[type="text"] {
 .topbar input {
 	width: 100px !important;
 }
+
+input#country {
+	width: 180px;
+}
